# WhisperDemo-Android

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: PLACEHOLDER.md
app/src/main/: AndroidManifest.xml
app/src/main/java/io/whisper/demo/: AddDeviceActivity.java  DeviceDetailActivity.java  DeviceDetailFragment.java  DeviceListActivity.java  MainApp.java  MyInfoActivity.java  VideoDecoder.java
app/src/main/java/io/whisper/demo/device/: Device.java  DeviceManager.java
app/src/main/res/drawable/: audio_play.xml  bulb.xml  seekbar_thumb.xml
app/src/main/res/layout/: activity_add_device.xml  activity_device_detail.xml  activity_device_list.xml  activity_my_info.xml  content_add_device.xml  device_detail.xml  device_list.xml  device_list_content.xml
app/src/main/res/layout-w900dp/: device_list.xml
app/src/main/res/menu/: menu_device_list.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
ffmpeg/: .gitignore  CMakeLists.txt  README.md  build.gradle
ffmpeg/native-dist/: PLACEHOLDER.md
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: ffmpegDecode.c
ffmpeg/src/main/java/io/whisper/ffmpeg/: FFmpegDecodeHandler.java  FfmpegDecode.java
gradle/wrapper/: gradle-wrapper.properties
rtp/: CMakeLists.txt  build.gradle
rtp/src/main/: AndroidManifest.xml
rtp/src/main/cpp/: CH264_RTP_UNPACK.h  unpacket.cpp
rtp/src/main/java/io/whisper/rtp/: UnPacket.java
